# food-review

./: .gitignore  LOCATION_IMPLEMENTATION_SUMMARY.md  README.md  ai_analysis_service.py  docker-compose.yml  location_service.py  main.py  pyproject.toml  requirements.txt
backend/: README.md  deno.json  location_service.py  package.json
backend/supabase/functions/handle-location/: index.ts
backend/supabase/functions/restaurant-search/: index.ts
frontend/Tastewise/Tastewise/: ContentView.swift  FavoritesManager.swift  FavoritesView.swift  Info.plist  Item.swift  LocationCache.swift  LocationManager.swift  LocationTest.swift  MainTabView.swift  MapView.swift  Restaurant.swift  RestaurantCacheManager.swift  RestaurantDetailView.swift  SearchView.swift  SettingsView.swift  StringArrayTransformer.swift  SupabaseService.swift  TastewiseApp.swift  UserFavorite.swift  UserPreferences.swift
frontend/Tastewise/Tastewise.xcodeproj/: project.pbxproj
frontend/Tastewise/Tastewise.xcodeproj/project.xcworkspace/xcuserdata/laithassaf.xcuserdatad/: UserInterfaceState.xcuserstate
frontend/Tastewise/Tastewise.xcodeproj/xcuserdata/laithassaf.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
frontend/Tastewise/Tastewise.xcodeproj/xcuserdata/laithassaf.xcuserdatad/xcschemes/: xcschememanagement.plist
frontend/Tastewise/Tastewise/Assets.xcassets/AppIcon.appiconset/: Contents.json
frontend/Tastewise/TastewiseTests/: TastewiseTests.swift
frontend/Tastewise/TastewiseUITests/: TastewiseUITests.swift  TastewiseUITestsLaunchTests.swift
