# pyproject.toml
[tool.poetry]
name = "restaurant-finder-api"
version = "0.2.0"
description = "MVP backend for restaurant discovery app with AI analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
httpx = "^0.25.2"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
openai = "^1.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
